big story update! fluff and recap structure added through 8/10 (Breaker's death)

--- a/all_collections/story/act-2-war-for-six-towers/2023-01-17/_posts/2023-01-17-recap.md
+++ b/all_collections/story/act-2-war-for-six-towers/2023-01-17/_posts/2023-01-17-recap.md
@@ -3,10 +3,10 @@ title: The Shmeet-Up
 tag: session-recap
 ---
 
-The Gray Cloaks sued for peace in exchange for a shot at Strangford (with you guys organizing the meet/ambush point). They’ve essentially burnt themselves out as an organization, and will not be a concern going forward. The war is won!
+To keep from having to wholesale slaughter the Gray Cloaks, the Nameless agreed to ambush City Councilmember, Leviathan Hunter super-owner, and their erstwhile bankroller . . . Lord Strangford. Strangford had been under investigation by the Gray Cloaks JUST before they were wrongfully kicked out of the force, and it was decided that his death would close the book on the gang war.
 
-Need a place to arrange a meet/ambush point for Lord Strangford, in exchange for peace with the Gray Cloaks? Unity Park. Problem with Unity Park? Favored high schooler makeout spot. Solution? Throw a rager. How do you throw a rager? GET THE SHMEEK TO FIGHT A DUDE.
+The ambush was set up in Brightstone's Unity Park, with cover provided by organizing a fight between noted wrestler Red Hot Dan Houston and teenage dumbass Jeremy "the Shmeek" Pendryn. 
 
-And when you gotta get a dude to fight the Shmeek and you’re the manager of V-Sea-W, there’s only one name in the phone book, AND THATS THE BOTTOM LINE, CUZ RED HOT DAN HOUSTON SAID SO. 
+Now, sure, the ambush broke down a little.  Strangford ended up bringing protection in the form of some sailors, a strange Whisper with a cat spirit (which has since possessed Donovan), and ultimately bribing Houston and the Shmeek to cover his retreat.
 
-How did Strangford get away? He paid the Shmeek and Red Hot Dan Houston a sack of money to cover his escape when then ambush started.
+But all ended well when Casta, Katya's situationship-turned-relationship, sniped Strangford through the throat. The other sailors were killed, the Whisper was killed-ish, and both Houston and the Shmeek were folded into V-Sea-W's good graces.
