--- a/all_collections/story/act-6/2023-12-28/_posts/2023-12-28-recap.md
+++ b/all_collections/story/act-6/2023-12-28/_posts/2023-12-28-recap.md
@@ -20,8 +20,8 @@ And make of them condos with luxuries studded
 The board members, from afar, giggle with glee   
 And to this project they'll pledge d6 of 3
 
-So, what happened tonight?
-
+So, what happened?
+g
 The Nameless (Spud and Arkin) decided to break Tarvul (incarcerated official leader of the Billhooks) out of Ironhook prison (faking his death in the process) to ruin Erin's (Tarvul's sister and de-facto Billhooks leader) Unity Day.
 
 They were NEARLY thwarted by Nat Marseilles and Chuck Morgenstern, who tried to sabotage the breakout and frame the Nameless for Tarvul's murder. Their reasoning? Not fully articulated as of yet, but they seem to have decided that the Nameless are worth fully taking down.
