add links to 1/25/2024 recap

--- a/all_collections/story/act-6/2024-01-25/_posts/2024-01-25-recap.md
+++ b/all_collections/story/act-6/2024-01-25/_posts/2024-01-25-recap.md
@@ -5,22 +5,22 @@ tag: session-recap
 
 # Session Recap
 
-The Nameless have successfully framed Joseph Woodward aka the Man in the Hat for . . . the MURDER of BREAKER!
+The Nameless have successfully framed [Joseph Woodward](/wiki/joseph-woodward) aka the Man in the Hat for . . . the MURDER of [BREAKER](/wiki/npcs#setarra)!
 
 This was accomplished by planting an "If I Did It"-style journal (immaculately forged, thanks to a group crit), map to the stone prison beneath the waves, and invoices to a fake shell company that supposedly produced large-scale electroplasmic weapons if you look at their records, which you really should because they definitely exist. Police attention was brought to this whole shenanigan setup, and future investigations will find corroborating evidence (or SUSPICIOUS LACK THEREOF) in evidence lockup, which was ABSOLUTELY NOT TAMPERED WITH.
 
- Book's police lockup tampering was hindered/enabled/hindered again by a rogue Blighter attack. Blighters have been pulling some low-rent supervillain shit across Duskwall for the past few days. Lotta cop bodies hit the floor (and were then reanimated with 15-foot demonic snakes) on this one, but that's NOT YOUR FAULT.
+[Books](/wiki/books)'s police lockup tampering was hindered/enabled/hindered again by a rogue [Blighter](/wiki/npcs#blighter) attack. Blighters have been pulling some low-rent supervillain shit across Duskwall for the past few days. Lotta cop bodies hit the floor (and were then reanimated with 15-foot demonic snakes) on this one, but that's NOT YOUR FAULT.
 
- Sandro was briefly contacted by the disembodied semi-spirit of Seventh Tower Corporation, which proclaimed itself "a body without a head" and is apparently searching for a new leader. At another point, Joseph Woodward numbly proclaimed himself "a decapitated head". This arcane chicanery was apparently enabled by some strange arcane . . . documents? that Sandro discovered and then promptly stashed at Deckherd Hall mid-heist.
+[Sandro](/wiki/sandro) was briefly contacted by the disembodied semi-spirit of [Seventh Tower Corporation](/wiki/seventh-tower-consortium), which proclaimed itself "a body without a head" and is apparently searching for a new leader. At another point, Joseph Woodward numbly proclaimed himself "a decapitated head". This arcane chicanery was apparently enabled by some strange arcane . . . documents? that Sandro discovered and then promptly stashed at [Deckherd Hall](/wiki/six-towers#deckherd-hall) mid-heist.
 
-Sizzle discovered that Studebaker Spud had a secret armory of (quality) guns and a weirdly horny black-and-red armored body suit in a secret compartment behind his office wall. She took the guns, but left the body suit. 
+[Sizzle](/wiki/sizzle) discovered that [Studebaker Spud](/wiki/npcs#studebaker-spud) had a secret armory of (quality) guns and a weirdly horny black-and-red armored body suit in a secret compartment behind his office wall. She took the guns, but left the body suit. 
 
 ***Likely consequences:***
 
 1. Studebaker Spud is probably going away for a minute.
 
-2. Nat Marseilles' investigatory efforts towards y'all will be misdirected by this compelling new tack.
+2. [Nat Marseilles](/wiki/npcs#nat-marseilles)' investigatory efforts towards y'all will be misdirected by this compelling new tack.
 
-3. This was not a one-and-done: Joseph Woodward is now considered to be the tip of an iceberg by the investigating Inspectors.
+3. This was not a one-and-done: Joseph Woodward is now considered to be the tip of an iceberg by the investigating [Inspectors](/wiki/factions#inspectors).
 
 **Books's Safety Tip:** *Even white-collar jobs aren't immune to the occasional super-science-motivated body-cannibalizing Serpentes attack, so don't forget a spritz of your lucibufagin-laced perfume to both deter reptiles & impress your coworkers.*
