--- a/all_collections/story/act-6/2023-12-26/_posts/2023-12-26-recap.md
+++ b/all_collections/story/act-6/2023-12-26/_posts/2023-12-26-recap.md
@@ -3,25 +3,21 @@ title: Unity Day, Part I
 tag: session-recap
 ---
 
-There appears to be a new focus in how Seventh Tower is approaching things now. The loss of such an overwhelming chunk of their forces seems to have pushed them back towards more guerilla tactics. Small groups of operatives, moving to disrupt at all available avenues to the Nameless' cash flow and power base.
+# Session Recap
 
-There are the expected attack avenues:
+The gang is going to disrupt the [Billhook](/wiki/the-billhooks) weapons and money drops from [Seventh Tower](/wiki/seventh-tower-consortium) to make their involvement with the war feel too costly and dangerous.
 
-The Fog Hounds are facing shoot-to-kill orders from Seventh Tower to the Billhooks, and Captain Clelland is getting some increasingly appealing financial offers.
+The gang is bringing the [Horned One](/wiki/npcs#the-horned-one) and the [Fog Hounds](/wiki/factions#fog-hounds) in to disrupt Unity Day as the caravans are rerouted into [Brightstone](/wiki/brightstone)
 
-But also, something unexpected: scores of the seemingly-unending streams of Marines, as well as some Billhooks and other local muscle for hire, are marching down into the sewers of Six Towers, perhaps to speak to the Dimmer Sisters . . . 
+Unity Day has only existed for the past 3 years, and has up until recently been a celebration of the Imperial victory over Skovland. HOWEVER, recently, there’s been a push to recontextualize the holiday to be a celebration of the BROADER IDEA of Unity and Togetherness..
 
-The gang is going to disrupt the Billhook weapons and money drops from 7th Tower to make their involvement with the war feel too costly and dangerous.
-
-The gang is bringing the Horned One and the Fog Hounds in to disrupt Unity Day as the caravans are rerouted into Brightstone
+And thanks to [Orianna](/wiki/affect), [Sizzle](/wiki/sizzle), and [Cruncho](/wiki/cruncho), this celebration would not be complete without the traditional Unity Door (a door given to The Troops by grateful Skovlanders).
 
 DUSKVOL LOVES THE TROOPS
 
-Nothing says Unity Day like a door
-
-Cruncho is possessed by Blighter   
+Cruncho is possessed by [Blighter](/wiki/npcs#blighter)   
 The Horned One is on the same page as Orianna   
-Casta’s called in her favor with Sizzle   
-Render is coming soon   
+[Casta](/wiki/npcs#casta)’s called in her favor with Sizzle: throw the Black Knights and Render off the trail of the real killers of [Breaker](/wiki/npcs#setarra)   
+[Render](/wiki/npcs#render) is coming soon   
 
 The grad students were caught with illegal weapons and a couple go to jail
