--- a/all_collections/story/act-6/2023-12-28/_posts/2023-12-28-recap.md
+++ b/all_collections/story/act-6/2023-12-28/_posts/2023-12-28-recap.md
@@ -3,12 +3,15 @@ title: Unity Day, Part II
 tag: session-recap
 ---
 
-So, what happened?
+# Session Recap
 
-The Nameless (Spud and Arkin) decided to break Tarvul (incarcerated official leader of the Billhooks) out of Ironhook prison (faking his death in the process) to ruin Erin's (Tarvul's sister and de-facto Billhooks leader) Unity Day.
+The Nameless ([Spud](/wiki/spud) and [Arkin](/wiki/arkin)) decided to break Tarvul (incarcerated official leader of the [Billhooks](/wiki/the-billhooks)) out of Ironhook prison (faking his death in the process) to ruin [Erin](/wiki/npcs#erin)'s (Tarvul's sister and de-facto Billhooks leader) Unity Day.
 
-They were NEARLY thwarted by Nat Marseilles and Chuck Morgenstern, who tried to sabotage the breakout and frame the Nameless for Tarvul's murder. Their reasoning? Not fully articulated as of yet, but they seem to have decided that the Nameless are worth fully taking down.
+They were NEARLY thwarted by [Nat Marseilles](/wiki/npcs#nat-marseilles) and [Chuck Morgenstern](/wiki/npcs#chuck-morgenstern), who tried to sabotage the breakout and frame the Nameless for Tarvul's murder. Their reasoning? Not fully articulated as of yet, but they seem to have decided that the Nameless are worth fully taking down. Arkin punched out Nat Marseilles (he’s been listening to [Katya](/wiki/katya)).
 
 However, a combination of tazing, incredible abdominal strength, a rocket-powered cart, and some good old-fashioned cop-killing saw the Nameless triumphant as a bloodied but living Tarvul climactically strode into the Billhooks' Unity Day festivities and retook his rightful place.
 
-Tarvul is not a fan of the wool that Erin has been pulling over his eyes, nor of the seeming-death of his son. **The Billhooks have withdrawn from the war.**
+Tarvul is not a fan of the wool that Erin has been pulling over his eyes, nor of the seeming-death of [his son](/wiki/npcs#coran).
+
+**The Billhooks have withdrawn from the war.**
+
