add links to Nov 2023 recaps

--- a/all_collections/story/act-6/2023-11-02/_posts/2023-11-02-recap.md
+++ b/all_collections/story/act-6/2023-11-02/_posts/2023-11-02-recap.md
@@ -2,17 +2,18 @@
 title: Throw the Match
 tag: session-recap
 ---
-V-Sea-W has several dozen ex-Imperial Soldiers in V-Sea-W, turning away wrestlers and getting ready for war. 
-There’s some kind of ghostly . . . Thing . . . Around the electroplasmic infrastructure of Six Towers in a 3-block radius of V-Sea-W.
+[V-Sea-W](/wiki/v-sea-w) has several dozen ex-Imperial Soldiers on the premesis, turning away wrestlers and getting ready for war. 
 
-The Billhooks were approached by 7th Tower because they are less entrenched in Six Towers and a more feasible option. The Billhooks sold you out for cold hard cash.
+There’s some kind of ghostly . . . Thing . . . Around the electroplasmic infrastructure of [Six Towers](/wiki/six-towers) in a 3-block radius of V-Sea-W.
+
+The [Billhooks](/wiki/the-billhooks) were approached by [7th Tower](/wiki/seventh-tower-consortium) because they are less entrenched in Six Towers and a more feasible option. The Billhooks sold you out for cold hard cash.
 
 The Gang Fakes a Loss of V-Sea-W. Bodies are planted, and the wrestlers are on board but they’re gonna wanna unionize after. V-Sea-W has been classified as a historical landmark
 
 Construction materials have been sabotaged for Seventh Tower Consortium   
 
-Duskwall has Batman now, and they’re attacking V-Sea-W. The clockmaker is aiding Batman (the Spider). The ghost of Francois is also involved.
+Duskwall has Batman now, and they’re attacking V-Sea-W. The clockmaker is aiding Batman (the [Spider](/wiki/npcs#the-spider)). The ghost of [François](/wiki/npcs#francois) is also involved.
 
-7th Tower has lost over a dozen experienced soldiers in “taking” (not really) V-Sea-W. “The Spider” is a new black-garbed and caped vigilante with impossible fighting skills and several gadgets at her disposal. She appears to be allied with the Clockmaker and the Ghost of Francois. She does not appear to be explicitly targeting the Nameless YET. OH and the Spider has a sample of Mara’s blood. But that’s probably fine.
+Seventh Tower has lost over a dozen experienced soldiers in “taking” (not really) V-Sea-W. “The Spider” is a new black-garbed and caped vigilante with impossible fighting skills and several gadgets at her disposal. She appears to be allied with [the Clockmaker](/wiki/the-clockmaker) and the Ghost of Francois. She does not appear to be explicitly targeting the Nameless YET. And the Spider has a sample of [Mara](/wiki/mara)’s blood. But that’s probably fine.
 
-Katya, Linmer, Mara, Orianna, and Sandro are all presumed dead. Arkin was, of course, ALREADY presumed dead.
+[Katya](/wiki/katya), [Linmer](/wiki/linmer), Mara, [Orianna](/wiki/affect), and [Sandro](/wiki/sandro) are all presumed dead. [Arkin](/wiki/arkin) was, of course, ALREADY presumed dead.
