--- a/all_collections/story/act-6/2023-11-14/_posts/2023-11-14-recap.md
+++ b/all_collections/story/act-6/2023-11-14/_posts/2023-11-14-recap.md
@@ -3,15 +3,15 @@ title: Crow Combat Cruises
 tag: session-recap
 ---
 
-Jammer, Mara, and Spud tried to steal some thunder from the Billhook fighting pit by recruiting their top fighters for . . . GHOST FIGHTING COMBAT SPORTS!
+[Jammer](/wiki/jammer), [Mara](/wiki/mara), and [Spud](/wiki/spud) tried to steal some thunder from the [Billhook](/wiki/the-billhooks) fighting pit by recruiting their top fighters for . . . GHOST FIGHTING COMBAT SPORTS!
 
-And in the process of looking for battle-ready ghosts, they hit upon a group of supernatural doctors called Crows (affiliated with the Dimmer Sisters AND the Black Knights). With the blessing of Casta’s parents Mikh and Sam and some convincing forgery, CROW COMBAT CRUISES WAS BORN!!!
+And in the process of looking for battle-ready ghosts, they hit upon a group of supernatural doctors called Crows (affiliated with the [Dimmer Sisters](/wiki/factions#dimmer-sisters) AND the Black Knights). With the blessing of [Casta](/wiki/npcs#casta)’s parents [Mikh](/wiki/npcs#mikh) and [Sam](/wiki/npcs#sam) and some convincing forgery, CROW COMBAT CRUISES WAS BORN!!!
 
-Now, was the launch flawless? No. Did Jammer and Spud steal Arlene Dunleavy’s (widow to Winston) steamship to host Crow Combat Cruises? Sure. Did the Crows then murder the pursuing Bluecoats and Billhooks (who had gone after the stolen ship as de-facto Dock rulers) before turning on our heroes? Absolutely. Did this all end with the gang sorta-befriending these Crows and getting away with their lives by giving the barge to the Dimmer Sisters (all while assuring the Crows that they would be regularly sent victims to be dissected)? Oh yes indeed.
+Now, was the launch flawless? No. Did Jammer and Spud steal [Arlene Dunleavy](/wiki/npcs#arlene-dunleavy)’s (widow to [Winslow](/wiki/winslow-dunleavy)) steamship to host Crow Combat Cruises? Sure. Did the Crows then murder the pursuing [Bluecoats](/wiki/factions#bluecoats) and Billhooks (who had gone after the stolen ship as de-facto Dock rulers) before turning on our heroes? Absolutely. Did this all end with the gang sorta-befriending these Crows and getting away with their lives by giving the barge to the Dimmer Sisters (all while assuring the Crows that they would be regularly sent victims to be dissected)? Oh yes indeed.
 
 But did Mara stumble upon the idea of GHOST TELEVISION???
 
-DID JAMMER MAKE A CROW FRIEND NAMED FRIEDRICH???
+DID JAMMER MAKE A CROW FRIEND NAMED [FRIEDRICH](/wiki/npcs#doctor-friedrich)???
 
 MIGHT SPUD BE TURNING INTO A CROW????
 
@@ -24,6 +24,6 @@ Some additions:
 * Mara forged a document that said we were certified in Crow containment, which made Mikh & Sam very suspicious of where we could have gotten such a thing in this day & age & place.
 * Jammer defeated a Crow (temporarily, we put it back) by pulling its heart out of its chest.
 * Jammer then swallowed said heart, which led to the temporary possession by Friedrich the Crow, but this was the only way we managed to actually communicate with a Crow.
-* Friedrich told us that he and the rest had been Crowified in some ungodly long ago time to fight for the Immortal Emperor under a different (original?) name, The Cinder King.
+* Friedrich told us that he and the rest had been Crowified in some ungodly long ago time to fight for the [Immortal Emperor](/wiki/npcs#the-immortal-emperor) under a different (original?) name, The Cinder King.
 * Friedrich specifically requested that we agree that profits from Ghost Fight Club be tithed to the Emperor.. we agreed but the Dimmer Sisters took full control of GFC so i guess that is now their problem!
-* How exactly the Crows are involved with 7th Tower and the Hat Man is unclear to me, but there seems to be some sort of tie between all these parties though based on their willingness to join GFC, not a perfect allyship. Ditto the Dimmer Sisters & Mikh & Sam.
+* How exactly the Crows are involved with [7th Tower](/wiki/seventh-tower-consortium) and the [Hat Man](/wiki/joseph-woodward) is unclear, but there seems to be some sort of tie between all these parties though based on their willingness to join GFC, not a perfect allyship. Ditto the Dimmer Sisters & Mikh & Sam.
