--- a/all_collections/story/act-6/2023-11-16/_posts/2023-11-16-recap.md
+++ b/all_collections/story/act-6/2023-11-16/_posts/2023-11-16-recap.md
@@ -3,42 +3,43 @@ title: Dishonored Guests
 tag: session-recap
 ---
 
-Arkin, Cruncho, Linmer, and Sizzle set out to absolutely buggerfuck Seventh Tower's premier Deckherd Hall gala (presented by Studebaker Spud and Puerto Rico Strauss in an uneven collaboration).
+[Arkin](/wiki/arkin), [Cruncho](/wiki/cruncho), [Linmer](/wiki/linmer), and [Sizzle](/wiki/sizzle) set out to absolutely buggerfuck [Seventh Tower](/wiki/seventh-tower-consortium)'s premier [Deckherd Hall](/wiki/six-towers#deckherd-hall) gala (presented by [Studebaker Spud](/wiki/npcs#studebaker-spud) and [Puerto Rico Strauss](/wiki/npcs#puerto-rico-strauss) in an uneven collaboration).
 
-Linmer infiltrated the party as the Shmeek's chaperone. The Shmeek's dipshit teenage friends Cole and Claire decided to tag along. Linmer should not be left to chaperone rambunctious teens.
+Linmer infiltrated the party as [the Shmeek](/wiki/npcs#jeremy-pendryn)'s chaperone. The Shmeek's dipshit teenage friends [Cole](/wiki/npcs#cole-a) and [Claire](/wiki/npcs#claire-strangford) decided to tag along. Linmer should not be left to chaperone rambunctious teens.
 
-Linmer ALSO discovered that the Spider had some of her mechanical arachnids in the walls, and was planning . . . something.
+Linmer ALSO discovered that the [Spider](/wiki/npcs#the-spider) had some of her mechanical arachnids in the walls, and was planning . . . something.
 
-Arkin and Cruncho got hired on as lighting and mechanical techs for the party. Arkin rigged the place to malfunction in sundry different ways, while Cruncho set to poisoning the water supply with Drownwater (makes you feel like you're drowning for a few seconds upon ingestion). Arkin ALSO made contact with the Clockmaker via one of the Spiders, who informed his fleshy doppelganger that there was to be an unspecified "test" tonight.
+Arkin and Cruncho got hired on as lighting and mechanical techs for the party. Arkin rigged the place to malfunction in sundry different ways, while Cruncho set to poisoning the water supply with Drownwater (makes you feel like you're drowning for a few seconds upon ingestion). Arkin ALSO made contact with [the Clockmaker](/wiki/the-clockmaker) via one of the Spiders, who informed his fleshy doppelganger that there was to be an unspecified "test" tonight.
 
-Sizzle linked up with Reek, the Red-Sash-outsource plug operating out of Crow's Foot. After nearly bearing witness to a fatal coffee, Heartcalm, Bloodneedle, and black pepper cocktail, Sizzle made off with the drugs and replaced them with a special concoction of Linmer's own devising. 
+Sizzle linked up with [Reek](/wiki/npcs#reek), the [Red-Sash](/wiki/factions#red-sashes)-outsource plug operating out of [Crow's Foot](/wiki/locations#crows-foot). After nearly bearing witness to a fatal coffee, Heartcalm, Bloodneedle, and black pepper cocktail, Sizzle made off with the drugs and replaced them with a special concoction of Linmer's own devising. 
+
 But what chaos unfolded at the party, I hear you ask?
 
 First, the sound system "accidentally" caught fire.
 
 Then, Cruncho was caught poisoning the water supply and went completely sicko mode on some ex-Marines.
 
-THEN, Linmer "accidentally" knocked over a pyramid of champagne flutes onto Lady Bowmore, and was chastened heartily. When he regained his composure, the teenagers had all vanished.
+THEN, Linmer "accidentally" knocked over a pyramid of champagne flutes onto [Lady Bowmore](/wiki/npcs#lady-bowmore), and was chastened heartily. When he regained his composure, the teenagers had all vanished.
 
-THEN Sizzle got her hands on a Seventh Tower thug's uniform with the help of Caleb Hollow, who took the thug's body and was subsequently a naked vampire in Six Towers for about 24 unsupervised hours.
+THEN Sizzle got her hands on a Seventh Tower thug's uniform with the help of [Caleb Hollow](/wiki/npcs#caleb-hollow), who took the thug's body and was subsequently a naked vampire in [Six Towers](/wiki/six-towers) for about 24 unsupervised hours.
 
-THEN, Sam and Mikh the Black Knights showed up, ostensibly for a couple's night out. The two immortal soldiers then went off the handle on Cruncho and Sizzle upon seeing them both and realizing that Something Was Afoot ('off the handle' here meaning extreme violence). 
+THEN, [Sam](/wiki/npcs#sam) and [Mikh](/wiki/npcs#mikh) the Black Knights showed up, ostensibly for a couple's night out. The two immortal soldiers then went off the handle on Cruncho and Sizzle upon seeing them both and realizing that Something Was Afoot ('off the handle' here meaning extreme violence). 
 
 ***THEN*** the lights went out, and the Spider made her move . . . Attacking Mikh in the midst of the party, even as Cruncho and Sizzle began fleeing from/fighting off various Seventh Tower forces that started to close in on their positions.
 
--Cruncho tetherball-style flung a hyper-Shmeeking Shmeek into a mass of ex-Marines. The Shmeek would have been black-bagged and possibly disappeared forever . . . Had a combination of expert marksmanship from Sizzle, legendary football prowess from Cruncho, and several smokebombs from Arkin not saved the youth from possible demise and CERTAIN incarceration.
+Cruncho tetherball-style flung a hyper-Shmeeking Shmeek into a mass of ex-Marines. The Shmeek would have been black-bagged and possibly disappeared forever . . . Had a combination of expert marksmanship from Sizzle, legendary football prowess from Cruncho, and several smokebombs from Arkin not saved the youth from possible demise and CERTAIN incarceration.
 
--Cruncho is on friendly speaking terms with the Clockmaker.
+Cruncho is on friendly speaking terms with the Clockmaker.
 
--The Spider held her own against Mikh, but not before revealing some kind of sparkcraft-and-arcana-assisted super-physique . . . and revealing her identity as Claire Strangford.
+The Spider held her own against Mikh, but not before revealing some kind of sparkcraft-and-arcana-assisted super-physique . . . and revealing her identity as Claire Strangford.
 
--Sizzle led Sam on a wild goose chase, but ultimately warded her off with a combination of parkour and honest emotional inventory. As a result of this, Sam and a bloodied Mikh decided that they'd have a lot more fun destroying Deckherd Hall than playing at being a couple enjoying a fancy party.
+Sizzle led Sam on a wild goose chase, but ultimately warded her off with a combination of parkour and honest emotional inventory. As a result of this, Sam and a bloodied Mikh decided that they'd have a lot more fun destroying Deckherd Hall than playing at being a couple enjoying a fancy party.
 
--Apparently, Sam and Mikh are ostensible allies of Seventh Tower. The Man in the Hat was irritated but ultimately unsurprised that they decided to start smashing his place.
+Apparently, Sam and Mikh are ostensible allies of Seventh Tower. The [Man in the Hat](/wiki/joseph-woodward) was irritated but ultimately unsurprised that they decided to start smashing his place.
 
--Lady Bowmore ultimately expired after being 1. Smashed by champagne flutes, 2. Having a large cake overturned atop her, and 3. Being trampled in rapid succession by Cruncho, Sizzle, Sam, and a troupe of ex-Marines.
+Lady Bowmore ultimately expired after being 1. Smashed by champagne flutes, 2. Having a large cake overturned atop her, and 3. Being trampled in rapid succession by Cruncho, Sizzle, Sam, and a troupe of ex-Marines.
 
--A grieving Anastasia Bowmore laid one on Linmer. LiNmEr'S gOt A gIrLfRiEnD!!111!!!!
+-A grieving [Anastasia Bowmore](/wiki/npcs#anastasia-bowmore) laid one on Linmer. LiNmEr'S gOt A gIrLfRiEnD!!111!!!!
 
 -The Man in the Hat confronted Linmer and tried to pressure him into betraying the Nameless in exchange for relief from his paranoia.
 
@@ -47,4 +48,5 @@ THEN, Sam and Mikh the Black Knights showed up, ostensibly for a couple's night 
 -The Spider got her hands on Linmer's blood. Linmer is also not allowed to chaperone the Shmeek ever again.
 
 -No idea what happened to Cole.
-AND IN THE END, the Nameless escaped, having THOROUGHLY ruined the party and assisted in completely ripping the guts out of Deckherd hall.
+
+AND IN THE END, the Nameless escaped, having THOROUGHLY ruined the party and assisted in completely ripping the guts out of Deckherd Hall.
