fix billhooks links

--- a/all_collections/story/act-6/2023-11-02/_posts/2023-11-02-recap.md
+++ b/all_collections/story/act-6/2023-11-02/_posts/2023-11-02-recap.md
@@ -6,7 +6,7 @@ tag: session-recap
 
 There’s some kind of ghostly . . . Thing . . . Around the electroplasmic infrastructure of [Six Towers](/wiki/six-towers) in a 3-block radius of V-Sea-W.
 
-The [Billhooks](/wiki/the-billhooks) were approached by [7th Tower](/wiki/seventh-tower-consortium) because they are less entrenched in Six Towers and a more feasible option. The Billhooks sold you out for cold hard cash.
+The [Billhooks](/wiki/billhooks) were approached by [7th Tower](/wiki/seventh-tower-consortium) because they are less entrenched in Six Towers and a more feasible option. The Billhooks sold you out for cold hard cash.
 
 The Gang Fakes a Loss of V-Sea-W. Bodies are planted, and the wrestlers are on board but they’re gonna wanna unionize after. V-Sea-W has been classified as a historical landmark
 
