--- a/all_collections/story/act-6/2023-11-14/_posts/2023-11-14-recap.md
+++ b/all_collections/story/act-6/2023-11-14/_posts/2023-11-14-recap.md
@@ -3,7 +3,7 @@ title: Crow Combat Cruises
 tag: session-recap
 ---
 
-[Jammer](/wiki/jammer), [Mara](/wiki/mara), and [Spud](/wiki/spud) tried to steal some thunder from the [Billhook](/wiki/the-billhooks) fighting pit by recruiting their top fighters for . . . GHOST FIGHTING COMBAT SPORTS!
+[Jammer](/wiki/jammer), [Mara](/wiki/mara), and [Spud](/wiki/spud) tried to steal some thunder from the [Billhook](/wiki/billhooks) fighting pit by recruiting their top fighters for . . . GHOST FIGHTING COMBAT SPORTS!
 
 And in the process of looking for battle-ready ghosts, they hit upon a group of supernatural doctors called Crows (affiliated with the [Dimmer Sisters](/wiki/factions#dimmer-sisters) AND the Black Knights). With the blessing of [Casta](/wiki/npcs#casta)’s parents [Mikh](/wiki/npcs#mikh) and [Sam](/wiki/npcs#sam) and some convincing forgery, CROW COMBAT CRUISES WAS BORN!!!
 
