--- a/all_collections/story/act-6/2023-12-26/_posts/2023-12-26-recap.md
+++ b/all_collections/story/act-6/2023-12-26/_posts/2023-12-26-recap.md
@@ -5,7 +5,7 @@ tag: session-recap
 
 # Session Recap
 
-The gang is going to disrupt the [Billhook](/wiki/the-billhooks) weapons and money drops from [Seventh Tower](/wiki/seventh-tower-consortium) to make their involvement with the war feel too costly and dangerous.
+The gang is going to disrupt the [Billhook](/wiki/billhooks) weapons and money drops from [Seventh Tower](/wiki/seventh-tower-consortium) to make their involvement with the war feel too costly and dangerous.
 
 The gang is bringing the [Horned One](/wiki/npcs#the-horned-one) and the [Fog Hounds](/wiki/factions#fog-hounds) in to disrupt Unity Day as the caravans are rerouted into [Brightstone](/wiki/brightstone)
 
