--- a/all_collections/story/act-6/2023-12-28/_posts/2023-12-28-recap.md
+++ b/all_collections/story/act-6/2023-12-28/_posts/2023-12-28-recap.md
@@ -5,7 +5,7 @@ tag: session-recap
 
 # Session Recap
 
-The Nameless ([Spud](/wiki/spud) and [Arkin](/wiki/arkin)) decided to break Tarvul (incarcerated official leader of the [Billhooks](/wiki/the-billhooks)) out of Ironhook prison (faking his death in the process) to ruin [Erin](/wiki/npcs#erin)'s (Tarvul's sister and de-facto Billhooks leader) Unity Day.
+The Nameless ([Spud](/wiki/spud) and [Arkin](/wiki/arkin)) decided to break Tarvul (incarcerated official leader of the [Billhooks](/wiki/billhooks)) out of Ironhook prison (faking his death in the process) to ruin [Erin](/wiki/npcs#erin)'s (Tarvul's sister and de-facto Billhooks leader) Unity Day.
 
 They were NEARLY thwarted by [Nat Marseilles](/wiki/npcs#nat-marseilles) and [Chuck Morgenstern](/wiki/npcs#chuck-morgenstern), who tried to sabotage the breakout and frame the Nameless for Tarvul's murder. Their reasoning? Not fully articulated as of yet, but they seem to have decided that the Nameless are worth fully taking down. Arkin punched out Nat Marseilles (he’s been listening to [Katya](/wiki/katya)).
 
