links added to all act 5 recaps

--- a/all_collections/story/act-5/2023-08-22/_posts/2023-08-22-recap.md
+++ b/all_collections/story/act-5/2023-08-22/_posts/2023-08-22-recap.md
@@ -3,4 +3,4 @@ title: Ghostly Acquisitions
 tag: session-recap
 ---
 
-The Nameless convince [Caleb Hollow](/wiki/npcs#caleb-hollow) to possess Eckherd "Deckerd", long-lost noble, as a means to facilitate the sale of [Deckherd Hall](/wiki/six-towers#deckherd-hall) to one [Studebaker Spud](/wiki/npcs#studebaker-spud). Also, there was a sword duel.
+The Nameless convince [Caleb Hollow](/wiki/npcs#caleb-hollow) to possess Eckherd "Deckerd", long-lost "noble", as a means to facilitate the sale of [Deckherd Hall](/wiki/six-towers#deckherd-hall) to one [Studebaker Spud](/wiki/npcs#studebaker-spud). Also, there was a sword duel.
