--- a/all_collections/story/act-5/2023-10-17/_posts/2023-10-17-recap.md
+++ b/all_collections/story/act-5/2023-10-17/_posts/2023-10-17-recap.md
@@ -1,30 +1,30 @@
 ---
-title: Phase I
+title: Contract Work
 tag: session-recap
 ---
 
-Seventh Tower Consortium is gentrifying Six Towers out from under you   
+[Seventh Tower Consortium](/wiki/seventh-tower-consortium) is gentrifying [Six Towers](/wiki/six-towers) out from under you   
 There are Imperial weapons involved   
-And a spooky man in a hat   
-Roselyn of the Dimmer Sisters is dead, but you’ve framed it on Seventh Tower Consortium!
+And a spooky [man in a hat](/wiki/joseph-woodward)   
+Roslyn of the [Dimmer Sisters](/wiki/factions#dimmer-sisters) is dead, but you’ve framed it on Seventh Tower Consortium!
 
 
-Grace the assassin is here to:
+[Grace the assassin](/wiki/npcs#grace) is here to:
 1. Kill Eckherd Deckherd
-2. Kill Myleria Klev of the Red Sashes
+2. Kill [Myleria Klev](/wiki/npcs#myleria-klev) of the [Red Sashes](/wiki/factions#red-sashes)
 3. Frame someone (the Nameless) for both of these deaths.
 4. Cause a brief lightning wall failure to the west
 
-Realizing that she has overextended herself (it happens in this capitalist grindset society!), she has contacted her friend Sizzle and her divinely(?)-ordained ally Cruncho to help her out with these two jobs!
+Realizing that she has overextended herself (it happens in this capitalist grindset society!), she has contacted her friend [Sizzle](/wiki/sizzle) and her divinely(?)-ordained ally [Cruncho](/cruncho) to help her out with these two jobs!
 
 Eckherd is dead and framed in a way that will NEVER STICK IN COURT
 
 the Crows and Black Knights are IN the city!
 
-Valanthe has a date with Sizzle over firearms
+[Valanthe](/wiki/npcs#valanthe) has a date with Sizzle over firearms
 
-Render is 6-8 weeks away
+[Render](/wiki/npcs#render) is 6-8 weeks away
 
-The Nameless are at War with Seventh Tower Consortium and sort of also the Billhooks!
+The Nameless are at War with Seventh Tower Consortium and sort of also the [Billhooks](/wiki/billhooks)!
 
 The Red Sash’s leader survived an assassination attempt through an untraceable anonymous tip so you’re going into this shit with your allies intact!
