--- a/all_collections/story/act-5/2023-09-05/_posts/2023-09-05-recap.md
+++ b/all_collections/story/act-5/2023-09-05/_posts/2023-09-05-recap.md
@@ -3,19 +3,19 @@ title: Mend Fences, Swing Clubs
 tag: session-recap
 ---
 
-The Nameless faked a lightning wall incident and made Captain Clelland and Erin of the Billhooks look like heroes of the hour WHILE ALSO doing an Inconvenient Truth. The Billhooks are financially embedded into the fabric of V-Sea-W and their civil war is over, with [Erin](/wiki/npcs#erin) as acting leader. [Coran](/wiki/npcs#coran) of the Billhooks has encountered Super Saiyan Goose and subsequently suffered ego death.
+The Nameless faked a lightning wall incident and made [Captain Clelland](/wiki/npcs#morgan-clelland) and [Erin](/wiki/npcs#erin) of the [Billhooks](/wiki/billhooks) look like heroes of the hour WHILE ALSO doing an Inconvenient Truth. The Billhooks are financially embedded into the fabric of V-Sea-W and their civil war is over, with Erin as acting leader. [Coran](/wiki/npcs#coran) of the Billhooks has encountered [Super Saiyan Goose](/wiki/npcs#the-horned-one) and subsequently suffered ego death.
 
-As a bonus, the Nameless struck up a financial relationship with the [Fog Hounds](/wiki/factions#foghounds) smugglers, and the [Lampblacks](/wiki/factions#lamplacks) are now under increased police scrutiny.
+As a bonus, the Nameless struck up a financial relationship with the [Fog Hounds](/wiki/factions#fog-hounds) smugglers, and the [Lampblacks](/wiki/factions#lampblacks) are now under increased police scrutiny.
 
 The Ironworks has been rebuilt with HEFTY controlling finance from the Ministry of Preservation.
 
-Meanwhile in Six Towers... (mumble mumble Strauss X7 nightclub)
+Meanwhile in [Six Towers](/wiki/six-towers)... (mumble mumble Strauss X7 nightclub)
 
-- Olga, community leader in Six Towers
-- Puerto Rico Strauss, enigmatic and strangely charismatic restauranteur with a string of failures and several low-end goons to his name
-- Boris Volkov, techno Viking and former Cloudspire architect. Also Katya’s brother.
-- Doctor Heinrich the Crow, now trapped in Ghost Box
-- Charity, sibling to the dead Mercy
-- Bhed the Wolf feeds on the ego
+- Olga, community leader in [Six Towers](/wiki/six-towers)
+- [Puerto Rico Strauss](/wiki/npcs#puerto-rico-strauss), enigmatic and strangely charismatic restauranteur with a string of failures and several low-end goons to his name
+- [Boris Volkov](/wiki/npcs#boris-volkov), techno Viking and former Cloudspire architect. Also [Katya](/wiki/katya)’s brother.
+- [Doctor Heinrich](/wiki/npcs#doctor-heinrich) the Crow, now trapped in Ghost Box
+- [Charity](/wiki/npcs#charity), sibling to the dead [Mercy](/wiki/npcs#mercy)
+- [Bhed the Wolf](/wiki/npcs#bhed-the-wolf) feeds on the ego
 - The electroplasmic guitar has been invented
 - Hungry Steve
