add links to act 4 recaps

--- a/all_collections/story/act-4/2023-05-25/_posts/2023-05-25-recap.md
+++ b/all_collections/story/act-4/2023-05-25/_posts/2023-05-25-recap.md
@@ -3,4 +3,13 @@ title: Highly Exothermic
 tag: session-recap
 ---
 
-The Nameless indirectly cause the destruction of a business vital to the economic and literal survival of Duskvol, and Arkin's conscience is now trapped in a bottle.
+The Nameless indirectly cause the destruction of a business vital to the economic and literal survival of Duskvol, and [Arkin](/wiki/arkin)'s conscience is now trapped in a bottle.
+
+The Duskvol Ironworks is/was a substantial part of the industrial and civic apparatus that allows Leviathan hunting (and thus, the electricity that powers Duskvol and keeps it safe from the Deathlands). Its destruction is a BIG DEAL.
+
+We have a perfect corpse facsimile of [Katya](/wiki/katya) lying around now.
+
+And [Arcade](/wiki/arcade) is now known to university workers (and the [university President](/wiki/npcs#vinculus-swing)) as a man of extremely cool understated hypercompetence, like how Vin Diesel wishes everyone thought of him.
+
+COMPLETELY UNRELATED: The [V-Sea-W](/wiki/v-sea-w) locker room is full of dissent and irritability, doubtless compounded by poor gate numbers and a lackluster response to the Dwayne's championship run. While there are a few factors at play, one Christopher Canaan is smugly stoking the fires of revolt. The Dwayne is done with V-Sea-W.
+
