--- a/all_collections/story/act-4/2023-07-13/_posts/2023-07-13-recap.md
+++ b/all_collections/story/act-4/2023-07-13/_posts/2023-07-13-recap.md
@@ -4,7 +4,7 @@ tag: session-recap
 ---
 
 - Saltford’s bank has crumbled, its ghostly infrastructure and strange semi-possessed tellers destroyed.
-- Young Hamwick, the demonic ragamuffin, is in possession of a safety deposit box belonging to “a bully”.
-- Saltford’s stands on the site of an ancient fort called Skydagger Keep, where a legion of some kind once held out against something called The Cinder King. The legion was bolstered by someone called a Chosen of Vazara, and faced down undead forces captained by someone named Breaker and someone else named Blighter.
-- A 9’ ghost wolf-man is free.
+- [Young Hamwick](/wiki/elia-wickham), the demonic ragamuffin, is in possession of a safety deposit box belonging to “a bully”.
+- Saltford’s stands on the site of an ancient fort called Skydagger Keep, where a legion of some kind once held out against something called [The Cinder King](/wiki/npcs#the-immortal-emperor). The legion was bolstered by someone called a Chosen of [Vazara](/wiki/npcs#vazara), and faced down undead forces captained by someone named [Breaker](/wiki/npcs#breaker) and someone else named [Blighter](/wiki/npcs#blighter).
+- A [9’ ghost wolf-man](/wiki/npcs#bhed-the-wolf) is free.
 - Sean McMichaels has a Glasgow smile and was beaten half to death by Ben Heart.
