--- a/all_collections/story/act-4/2023-07-25/_posts/2023-07-25-recap.md
+++ b/all_collections/story/act-4/2023-07-25/_posts/2023-07-25-recap.md
@@ -3,4 +3,9 @@ title: Thrice Again
 tag: session-recap
 ---
 
-Scurlock is recovered from the Dimmer Sisters thanks to a team-up of the Nameless and Casta. Complications arise when some new law enforcement arrives on the scene. Claire Strangford has an unfortunate experience at Makeout Mine.
+[Scurlock](/wiki/lord-scurlock) is recovered from the [Dimmer Sisters](/wiki/factions#dimmer-sisters) thanks to a team-up of the Nameless and [Casta](/wiki/npcs#casta). Complications arise when some new law enforcement arrives on the scene. [Claire Strangford](/wiki/npcs#claire-strangford) has an unfortunate experience at Makeout Mine.
+
+“-would be irresponsible-“   
+“-Containment would be-“   
+“-[Blighter](/wiki/npcs#blighter), my lady-“   
+“-[LUGOS](/wiki/npcs#lugos) NO-“
