adjust links for billhooks, seventh tower, scurlock, etc

--- a/all_collections/story/act-5/2023-09-21/_posts/2023-09-21-recap.md
+++ b/all_collections/story/act-5/2023-09-21/_posts/2023-09-21-recap.md
@@ -3,7 +3,7 @@ title: Pawns & Needles
 tag: session-recap
 ---
 
-[Deckherd Hall](/wiki/six-towers#deckherd-hall), recently renovated into a luxurious gambling establishment, has received a threat from [Lugos](npcs#lugos): a piece of flayed skin finely embroidered with the phrase *“someone is going to die”*. In response, [Bluecoat](/wiki/factions#bluecoats) Captain [Morgan Clelland](/wiki/npcs#morgan-clelland) hires the Nameless to quell the possibility of a second Deckherd Hall Massacre. After some initial investigation (which reveals the renovation's financial backers as the [Seventh Tower Consortium](/wiki/seventh-tower-consortium)), the Nameless decide to intercept Lugos before he can interfere with the grand opening.
+[Deckherd Hall](/wiki/six-towers#deckherd-hall), recently renovated into a luxurious gambling establishment, has received a threat from [Lugos](npcs#lugos): a piece of flayed skin finely embroidered with the phrase *“someone is going to die”*. In response, [Bluecoat](/wiki/factions#bluecoats) Captain [Morgan Clelland](/wiki/npcs#morgan-clelland) hires the Nameless to quell the possibility of a second Deckherd Hall Massacre. After some initial investigation (which reveals the renovation's financial backers as the [Seventh Tower Consortium](/wiki/seventh-tower)), the Nameless decide to intercept Lugos before he can interfere with the grand opening.
 
 The Nameless track Lugos to the abandoned [Claddage Manor](/wiki/brightstone#claddage-manor) and begin their infiltration. [Flan](/wiki/flan) and [Sizzle](/wiki/sizzle) uncover (and behead) the partially flayed corpse of former Spirit Warden [Cassiopeia Beasby](/wiki/npcs#cassiopeia-beasby), learning that her metal [Spirit Warden](/wiki/factions#spirit-wardens) skeleton has been augmented with sharp, needle-like claws. [Arkin](/wiki/arkin-wollstonecraft) discovers a clockwork spider in the manor’s vents just before Sizzle’s hawk alerts the Nameless to Lugos’s return. 
 
