--- a/all_collections/story/act-5/2023-10-17/_posts/2023-10-17-recap.md
+++ b/all_collections/story/act-5/2023-10-17/_posts/2023-10-17-recap.md
@@ -3,7 +3,7 @@ title: Contract Work
 tag: session-recap
 ---
 
-[Seventh Tower Consortium](/wiki/seventh-tower-consortium) is gentrifying [Six Towers](/wiki/six-towers) out from under you   
+[Seventh Tower Consortium](/wiki/seventh-tower) is gentrifying [Six Towers](/wiki/six-towers) out from under you   
 There are Imperial weapons involved   
 And a spooky [man in a hat](/wiki/joseph-woodward)   
 Roslyn of the [Dimmer Sisters](/wiki/factions#dimmer-sisters) is dead, but you’ve framed it on Seventh Tower Consortium!
