--- a/all_collections/story/act-6/2023-11-14/_posts/2023-11-14-recap.md
+++ b/all_collections/story/act-6/2023-11-14/_posts/2023-11-14-recap.md
@@ -26,4 +26,4 @@ Some additions:
 * Jammer then swallowed said heart, which led to the temporary possession by Friedrich the Crow, but this was the only way we managed to actually communicate with a Crow.
 * Friedrich told us that he and the rest had been Crowified in some ungodly long ago time to fight for the [Immortal Emperor](/wiki/npcs#the-immortal-emperor) under a different (original?) name, The Cinder King.
 * Friedrich specifically requested that we agree that profits from Ghost Fight Club be tithed to the Emperor.. we agreed but the Dimmer Sisters took full control of GFC so i guess that is now their problem!
-* How exactly the Crows are involved with [7th Tower](/wiki/seventh-tower-consortium) and the [Hat Man](/wiki/joseph-woodward) is unclear, but there seems to be some sort of tie between all these parties though based on their willingness to join GFC, not a perfect allyship. Ditto the Dimmer Sisters & Mikh & Sam.
+* How exactly the Crows are involved with [7th Tower](/wiki/seventh-tower) and the [Hat Man](/wiki/joseph-woodward) is unclear, but there seems to be some sort of tie between all these parties though based on their willingness to join GFC, not a perfect allyship. Ditto the Dimmer Sisters & Mikh & Sam.
