--- a/all_collections/story/act-6/2023-11-16/_posts/2023-11-16-recap.md
+++ b/all_collections/story/act-6/2023-11-16/_posts/2023-11-16-recap.md
@@ -3,7 +3,7 @@ title: Dishonored Guests
 tag: session-recap
 ---
 
-[Arkin](/wiki/arkin), [Cruncho](/wiki/cruncho), [Linmer](/wiki/linmer), and [Sizzle](/wiki/sizzle) set out to absolutely buggerfuck [Seventh Tower](/wiki/seventh-tower-consortium)'s premier [Deckherd Hall](/wiki/six-towers#deckherd-hall) gala (presented by [Studebaker Spud](/wiki/npcs#studebaker-spud) and [Puerto Rico Strauss](/wiki/npcs#puerto-rico-strauss) in an uneven collaboration).
+[Arkin](/wiki/arkin), [Cruncho](/wiki/cruncho), [Linmer](/wiki/linmer), and [Sizzle](/wiki/sizzle) set out to absolutely buggerfuck [Seventh Tower](/wiki/seventh-tower)'s premier [Deckherd Hall](/wiki/six-towers#deckherd-hall) gala (presented by [Studebaker Spud](/wiki/npcs#studebaker-spud) and [Puerto Rico Strauss](/wiki/npcs#puerto-rico-strauss) in an uneven collaboration).
 
 Linmer infiltrated the party as [the Shmeek](/wiki/npcs#jeremy-pendryn)'s chaperone. The Shmeek's dipshit teenage friends [Cole](/wiki/npcs#cole-a) and [Claire](/wiki/npcs#claire-strangford) decided to tag along. Linmer should not be left to chaperone rambunctious teens.
 
