--- a/all_collections/story/act-6/2023-12-14/_posts/2023-12-14-recap.md
+++ b/all_collections/story/act-6/2023-12-14/_posts/2023-12-14-recap.md
@@ -11,7 +11,7 @@ tag: session-recap
 
 *Oh wow! Must've been quite a battle!*
 
-So, funny you should say that . . . There wasn't a battle, exactly. Oh, there was an invasion planned, to be sure! Squads of ex-Marines with all kinds of heavy weaponry and artillery were deployed by [Seventh Tower](/wiki/seventh-tower-consortium). Their plan was to flank around through the Deathlands, come up through a service entry in the Lightning Wall, and then blow the place to hell. They got 2/3 of the way there, but then . . . well, the Nameless happened.
+So, funny you should say that . . . There wasn't a battle, exactly. Oh, there was an invasion planned, to be sure! Squads of ex-Marines with all kinds of heavy weaponry and artillery were deployed by [Seventh Tower](/wiki/seventh-tower). Their plan was to flank around through the Deathlands, come up through a service entry in the Lightning Wall, and then blow the place to hell. They got 2/3 of the way there, but then . . . well, the Nameless happened.
 
 *Gotcha. Was it ghosts? Soup? Hagfish? Drugs?*
 
