--- a/all_collections/story/act-6/2024-01-11/_posts/2024-01-11-recap.md
+++ b/all_collections/story/act-6/2024-01-11/_posts/2024-01-11-recap.md
@@ -11,7 +11,7 @@ tag: session-recap
 
 -[Sizzle](/wiki/sizzle) has captured [Joseph Woodward](/wiki/joseph-woodward) aka the Man in the Hat and (temporarily) severed him from the ghost field.
 
--The entire narrative has been spread to the newspapers courtesy of Sandro's media acumen: free market venture capitalism is a fraud, [Seventh Tower](/wiki/seventh-tower-consortium) are hucksters of the highest order, and law enforcement is investigating them (now headed up by [Nat Marseilles](/wiki/npcs#nat-marseilles)).
+-The entire narrative has been spread to the newspapers courtesy of Sandro's media acumen: free market venture capitalism is a fraud, [Seventh Tower](/wiki/seventh-tower) are hucksters of the highest order, and law enforcement is investigating them (now headed up by [Nat Marseilles](/wiki/npcs#nat-marseilles)).
 
 -[Chuck Morgenstern](/wiki/npcs#chuck-morgenstern) may be dead, or seriously injured
 
