--- a/all_collections/story/act-6/2024-01-25/_posts/2024-01-25-recap.md
+++ b/all_collections/story/act-6/2024-01-25/_posts/2024-01-25-recap.md
@@ -11,7 +11,7 @@ This was accomplished by planting an "If I Did It"-style journal (immaculately f
 
 [Books](/wiki/books)'s police lockup tampering was hindered/enabled/hindered again by a rogue [Blighter](/wiki/npcs#blighter) attack. Blighters have been pulling some low-rent supervillain shit across Duskwall for the past few days. Lotta cop bodies hit the floor (and were then reanimated with 15-foot demonic snakes) on this one, but that's NOT YOUR FAULT.
 
-[Sandro](/wiki/sandro) was briefly contacted by the disembodied semi-spirit of [Seventh Tower Corporation](/wiki/seventh-tower-consortium), which proclaimed itself "a body without a head" and is apparently searching for a new leader. At another point, Joseph Woodward numbly proclaimed himself "a decapitated head". This arcane chicanery was apparently enabled by some strange arcane . . . documents? that Sandro discovered and then promptly stashed at [Deckherd Hall](/wiki/six-towers#deckherd-hall) mid-heist.
+[Sandro](/wiki/sandro) was briefly contacted by the disembodied semi-spirit of [Seventh Tower Corporation](/wiki/seventh-tower), which proclaimed itself "a body without a head" and is apparently searching for a new leader. At another point, Joseph Woodward numbly proclaimed himself "a decapitated head". This arcane chicanery was apparently enabled by some strange arcane . . . documents? that Sandro discovered and then promptly stashed at [Deckherd Hall](/wiki/six-towers#deckherd-hall) mid-heist.
 
 [Sizzle](/wiki/sizzle) discovered that [Studebaker Spud](/wiki/npcs#studebaker-spud) had a secret armory of (quality) guns and a weirdly horny black-and-red armored body suit in a secret compartment behind his office wall. She took the guns, but left the body suit. 
 
