add links to all remaining recaps

--- a/all_collections/story/act-2/2022-11-29/_posts/2022-11-29-recap.md
+++ b/all_collections/story/act-2/2022-11-29/_posts/2022-11-29-recap.md
@@ -2,4 +2,4 @@
 title: "Our Pit Now"
 tag: session-recap
 ---
-The acquisition of Void Sea Wrestling.
+The acquisition of the [Void Sea Wrestling](/wiki/v-sea-w) arena.
