--- a/all_collections/story/act-2/2022-12-17/_posts/2022-12-17-recap.md
+++ b/all_collections/story/act-2/2022-12-17/_posts/2022-12-17-recap.md
@@ -2,4 +2,4 @@
 title: "Gray Inferno"
 tag: session-recap
 ---
-The Nameless take the Gray Cloaks' base by storm.
+The Nameless take the [Gray Cloaks](/wiki/factions#gray-cloaks)' base by storm.
