--- a/all_collections/story/act-3/2023-02-01/_posts/2023-02-01-recap.md
+++ b/all_collections/story/act-3/2023-02-01/_posts/2023-02-01-recap.md
@@ -3,4 +3,4 @@ title: Pincer Maneuver
 tag: session-recap
 ---
 
-Museum heist with a side of roofie lobster (nobody tell Giancarlo).
+Museum heist with a side of roofie lobster (nobody tell [Giancarlo](/wiki/npcs#giancarlo)).
