--- a/all_collections/story/act-3/2023-03-02/_posts/2023-03-02-recap.md
+++ b/all_collections/story/act-3/2023-03-02/_posts/2023-03-02-recap.md
@@ -3,4 +3,4 @@ title: Inappropriated Funds
 tag: session-recap
 ---
 
-The deposing of Dr. Carver Wrackham Malleus, PhD, IFD.
+The deposing of Dr. [Carver Wrackham Malleus](/wiki/npcs#carver-malleus), PhD, IFD.
