--- a/all_collections/story/act-3/2023-03-21/_posts/2023-03-21-recap.md
+++ b/all_collections/story/act-3/2023-03-21/_posts/2023-03-21-recap.md
@@ -3,4 +3,4 @@ title: Moving Day
 tag: session-recap
 ---
 
-Relocation of the Red Sash drug lab, a subsequent Lampblack chase, and the release of many Skovlan geese.
+Relocation of the [Red Sash](/wiki/factions#red-sashes) drug lab, a subsequent [Lampblack](/wiki/factions#lampblacks) chase, and the release of many Skovlan geese.
