--- a/all_collections/story/act-3/2023-04-13/_posts/2023-04-13-recap.md
+++ b/all_collections/story/act-3/2023-04-13/_posts/2023-04-13-recap.md
@@ -3,22 +3,22 @@ title: DuskViolence
 tag: session-recap
 ---
 
-DuskViolence (the premiere V-Sea-W extravaganza) was a massive success (with caveats).
+DuskViolence (the premiere [V-Sea-W](/wiki/v-sea-w) extravaganza) was a massive success (with caveats).
 
 Caveat 1: Cactus Joe allowed himself to be fitted by a strange metallic device from the Deathlands, which allowed him to absorb a terrific amount of pain in exchange for a ghostly near-detonation. Upon its removal, his many injuries have caught up to him.
 
 Caveat 2: Shit done blowed up with Sean McMichaels and Ben Heart. You guys can pick one or the other, but not both.
 
-Caveat 3: We have instituted a “run-props-by-Arkin” policy.
+Caveat 3: We have instituted a “run-props-by-[Arkin](/wiki/arkin)” policy.
 
 Caveat 4: Rock “the John” Dwayneson has won the V-Sea-W Heavyweight Title, which has put off his theatrical ambitions ... For now.
 
-Caveat 5: Christopher Canaan has used Arcade’s Iruvian Sheik character and some unfortunate undercard moments to start an Akarosi vs. Iruvian mentality among the crowd*. This, and other incidents, have set up a storyline with Christopher Canaan facing off against the Iruvian Sheik, Eduardo Warrior, and ... 
+Caveat 5: Christopher Canaan has used [Arcade](/wiki/arcade)’s Iruvian Sheik character and some unfortunate undercard moments to start an Akarosi vs. Iruvian mentality among the crowd. This, and other incidents, have set up a storyline with Christopher Canaan facing off against the Iruvian Sheik, Eduardo Warrior, and ... 
 
-Caveat 6: ... The Shmeek, who has been bound by Ghost Contract (definitely real, don’t look it up) to serve the Iruvian Sheik. Red Hot Dan Houston has been cast aside as the Shmeek’s manager (but is still with the company).
+Caveat 6: ... [The Shmeek](/wiki/npcs#jeremy-pendryn), who has been bound by Ghost Contract (definitely real, don’t look it up) to serve the Iruvian Sheik. Red Hot Dan Houston has been cast aside as the Shmeek’s manager (but is still with the company).
 
-Caveat 7: Baszo Baz, having provided Cactus Joe with the relic as a means of sowing chaos on V-Sea-W’s biggest night, considers you all even after your choice to back the Iruvians. Whether you all consider yourselves even with him is, of course, your decision.
+Caveat 7: [Baszo Baz](/wiki/npcs#baszo-baz), having provided Cactus Joe with the relic as a means of sowing chaos on V-Sea-W’s biggest night, considers you all even after your choice to back the Iruvians. Whether you all consider yourselves even with him is, of course, your decision.
 
-Caveat 8: the She-Wolf of Severos showed up, knocked out the Pallbearer with a boxing glove arrow, exited via fight with Ventrue, and may never show up in V-Sea-W ever again.
+Caveat 8: the [She-Wolf of Severos](/wiki/katya) showed up, knocked out the Pallbearer with a boxing glove arrow, exited via fight with Ventrue, and may never show up in V-Sea-W ever again.
 
 Caveat 9: The Shmeek bit the head off of someone’s ceramic dog. But that’s probably fine.
