--- a/all_collections/story/act-3/2023-05-02/_posts/2023-05-02-recap.md
+++ b/all_collections/story/act-3/2023-05-02/_posts/2023-05-02-recap.md
@@ -5,4 +5,6 @@ tag: session-recap
 ---
 # Session Summary
 
-The Nameless narrowly evade Oopsy Poopsy Bootsy, legendary assassin, with... the power of the sun?
+The Nameless narrowly evade [Oopsy Poopsy Bootsy](/wiki/npcs#old-bootsy), legendary assassin, with... the power of the sun?
+
+Oopsy Poopsy Bootsy’s bloodlust is sated unless extraordinary events reveal the imperfections in his repaired Mothers Little Hunter Dalton ceramic figurine.
